test_translator/tests/data/checkpoint_2/core/pass/60_tol_flag_basic/solution.ts
export function approx_pi(): number {
    return 3.14158;  // Close but not exact
}
