test_translator/tests/data/checkpoint_2/core/fail/71_isclose_rel_tol/solution.ts
export function ratio(): number {
    return 110.0;  // Outside 5% of 100
}
